doc: rename classes