@@ -1,10 +1,10 @@
-package com.alvesdev.MemeAbyss.service;
+package com.alvesdev.PostAbyss.service;
 
 
-import com.alvesdev.MemeAbyss.model.dto.Reddit.Child;
-import com.alvesdev.MemeAbyss.model.dto.MemeDTO;
-import com.alvesdev.MemeAbyss.model.dto.Reddit.PostData;
-import com.alvesdev.MemeAbyss.model.dto.Reddit.RedditResponse;
+import com.alvesdev.PostAbyss.model.dto.Reddit.Child;
+import com.alvesdev.PostAbyss.model.dto.MemeDTO;
+import com.alvesdev.PostAbyss.model.dto.Reddit.PostData;
+import com.alvesdev.PostAbyss.model.dto.Reddit.RedditResponse;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.stereotype.Service;
 
@@ -13,12 +13,12 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.util.List;
+import java.util.Objects;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
 
-public class MemeAbyssService {
+public class PostAbyssService {
 
     public MemeDTO searchMeme(){
         try{
@@ -52,21 +52,9 @@ public class MemeAbyssService {
             // Filtro para imagens
             List<PostData> imageMemes = redditResponse.getData().getChildren().stream()
                     .map(Child::getPostData)
-                    .filter(pd -> pd != null)
-                    .filter(pd -> {
-                        String hint = pd.getTipoPost();
-                        String url = pd.getUrl();
-                        String urlDest = pd.getUrlOverriddenByDest();
-
-                        boolean hasImageHint = hint != null && (hint.equals("image") || hint.equals("link"));
-                        boolean hasValidUrl = (url != null && (url.endsWith(".jpg") || url.endsWith(".jpeg") || url.endsWith(".png") || url.endsWith(".gif")))
-                                || (urlDest != null && (urlDest.endsWith(".jpg") || urlDest.endsWith(".jpeg") || urlDest.endsWith(".png") || urlDest.endsWith(".gif")));
-
-                        boolean hasPreviewImages = pd.getPreview() != null && pd.getPreview().getImages() != null && !pd.getPreview().getImages().isEmpty();
-
-                        return hasImageHint && (hasValidUrl || hasPreviewImages);
-                    })
-                    .collect(Collectors.toList());
+                    .filter(Objects::nonNull)
+                    .filter(PostFilter::isValidImagePost) // método estático criado por você
+                    .toList();
 
 
             if(imageMemes.isEmpty()){
@@ -101,4 +89,30 @@ public class MemeAbyssService {
             return new MemeDTO("ERRO", "");
         }
     }
+
+    public static class PostFilter {
+        public static boolean isValidImagePost(PostData pd) {
+            var hint = pd.getTipoPost();
+            var url = pd.getUrl();
+            var urlDest = pd.getUrlOverriddenByDest();
+
+            boolean hasImageHint = hint != null && (hint.equals("image") || hint.equals("link"));
+
+            boolean hasValidUrl = false;
+            if (url != null) {
+                hasValidUrl = url.endsWith(".jpg") || url.endsWith(".jpeg") || url.endsWith(".png") || url.endsWith(".gif");
+            }
+            if (!hasValidUrl && urlDest != null) {
+                hasValidUrl = urlDest.endsWith(".jpg") || urlDest.endsWith(".jpeg") || urlDest.endsWith(".png") || urlDest.endsWith(".gif");
+            }
+
+            var preview = pd.getPreview();
+            boolean hasPreviewImages = preview != null
+                    && preview.getImages() != null
+                    && !preview.getImages().isEmpty();
+
+            return hasImageHint && (hasValidUrl || hasPreviewImages);
+        }
+    }
+
 }
